# dotfiles

./: .bash_profile  .gitconfig  .gitconfig.alias  .gitignore  .gitignore_global  .hyper.js  .ideavimrc  .tigrc  .tmux.conf  .vimrc  .zshrc  Brewfile  README.md  cornix-keymap.vil  cornix-settings.vil  koizumi.terminal  link.sh  setup.sh  starship.toml
.config/nvim/: init.vim
.config/nvim/bundles/ale/: settings.vim
.config/nvim/bundles/dein/: dein.toml  dein.vim  dein_lazy.toml
.config/nvim/bundles/nerdtree/: settings.vim
.vim/nvim/: init.vim
.vim/nvim/bundles/dein/: dein.toml  dein.vim
.vim/nvim/bundles/nerdtree/: settings.vim
.vim/nvim/bundles/vim-airline/: settings.vim
.vim/nvim/runtime/: pyproject.toml
git/: ignore
gitui/: key_bindings.ron  key_symbols.ron  theme.ron
nvim/: init-vscode.lua  init-vscode.vim  init.lua  init.vim  lazy-lock.json
nvim/after/lsp/: rust_analyzer.lua
nvim/bundles/dein/: dein.toml  dein.vim
nvim/bundles/vim-airline/: settings.vim
nvim/lua/config/: keymaps.lua  lazy-vscode.lua  lazy.lua  lsp.lua  options.lua
nvim/lua/plugins/: blink-cmp.lua  bufferline.lua  code-jump.lua  color-scheme.lua  edit.lua  file-markdown.lua  filer.lua  gitliner.lua  linter.lua  lsp.lua  modes.lua  octo.lua  outline.lua  session.lua  snacks.lua  status-line.lua  syntax-highlight.lua  telescope.lua  tree-sitter.lua
nvim/lua/plugins-vscode/: edit.lua  tree-sitter.lua
nvim/runtime/: README.md
raycast/: uuidgen.sh
vscode/: keybindings.json  settings.json
vscode/snippets/: typescript.json  typescriptreact.json
wezterm/: wezterm.lua
(+1 files in other folders)
