[tool.poetry]
name = "runtime"
version = "0.1.0"
description = ""
authors = ["koizr <koizumi.ryo.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pynvim = "^0.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
